# bittorrent-benchmarks

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bittorrent-benchmarks.Dockerfile  docker-compose-codex.ci.yaml  docker-compose-codex.local.yaml  docker-compose-deluge.ci.yaml  docker-compose-deluge.local.yaml  docker-compose-up.sh  docker-compose.ci.yaml  docker-compose.local.yaml  docker-compose.yaml  experiments-codex.local.yaml  experiments-deluge.k8s.yaml  experiments-deluge.local.yaml  experiments-local.yaml  experiments.k8s.yaml  experiments.local.yaml  experiments.yaml  pyproject.toml
.github/workflows/: argo.yaml  argo.yml  ci.yml
analysis/: collect-logs.sh  deluge-exploratory-analysis.Rmd  static-network-experiment.Rmd
analysis/exploratory/: collect-logs.sh  deluge-exploratory-analysis.Rmd  exploratory-analysis.Rmd
analysis/final/: DESCRIPTION  static-dissemination.Rmd
analysis/final.analysis/: DESCRIPTION  static-dissemination.Rmd
analysis/presentation.short/: short-presentation.qmd
benchmarks/: cli.py  conftest.py
benchmarks/codex/: agent.py  client.py  codex_node.py  config.py  logging.py
benchmarks/core/: agent.py  concurrency.py  config.py  deluge.py  logging.py  network.py  pydantic.py  utils.py
benchmarks/deluge/: config.py  deluge_node.py  logging.py  (+1 more)
docker/: bittorrent-benchmarks-workflows.Dockerfile  bittorrent-benchmarks.Dockerfile
k8s/: README.md  deluge-pvc.yaml  deluge-service.yaml  deluge-statefulset.yaml  deploy-order.txt  namespace.yaml  run.sh  testrunner-job.yaml  tracker-deployment.yaml  tracker-service.yaml
(+125 files in other folders)
