[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = "Harness for benchmarking Codex against BitTorrent."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
deluge-client = "^1.10.2"
pathvalidate = "^3.2.1"
torrentool = "^1.2.0"
pydantic = "^2.10.2"
pyyaml = "^6.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
types-pyyaml = "^6.0.12.20240917"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests"
]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bittorrent-benchmarks = "benchmarks.cli:main"